# plagued-website

./: .gitignore  EMAIL_SETUP_GUIDE.md  README.md  SECURITY_SETUP.md  pyproject.toml
.claude/: settings.local.json
admin/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
admin/src/: App.jsx  index.css
admin/src/components/: Layout.jsx  ProtectedRoute.jsx  Sidebar.jsx  StatusBadge.jsx
admin/src/context/: AuthContext.jsx
admin/src/lib/: api.js  formatters.js
admin/src/pages/: Analytics.jsx  Collections.jsx  Customers.jsx  Dashboard.jsx  Login.jsx  Orders.jsx  Products.jsx
backend/: .env.example  admin_auth.py  admin_collections.py  admin_db.py  database.py  main.py  migration_add_product_type_colour.sql  migration_add_unit_cost.sql  migration_autogenerate_product_ids.sql  migration_collections.sql  migration_complete_product_setup.sql  migration_discount_codes.sql  migration_remove_is_available.sql  migration_rpc_all_variants.sql  migration_rpc_functions.sql  migration_update_order_statuses.sql  pyproject.toml  requirements.txt  royal_mail.py  run_migration.py  security_middleware.py  supabase_client.py  supabase_schema.sql  supabase_schema_v2_clean.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: robots.txt
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CartSidebar.jsx  Layout.jsx  MailingListPopup.jsx  RouteGuard.jsx  SmokeShader.jsx
frontend/src/config/: pageConfig.json
frontend/src/context/: CartContext.jsx  StripeProvider.jsx
(+12 files in other folders)
